volexc/tests/ui/check_undefined_type_map_value.out
Error: undefined type `UndefinedType`
   ╭─[ check_undefined_type_map_value.vol:3:15 ]
   │
 3 │     bar: {u32:UndefinedType};
   │               ──────┬──────  
   │                     ╰──────── not found
───╯