volexc/tests/ui/check_undefined_type_map_value.vol
// Undefined type in map value
struct Foo {
    bar: {u32:UndefinedType};
}
